syntax = "proto3";

package location;

option go_package = "github.com/OneKeyCoder/UIT-Go-Backend/proto/location";

// LocationService provides location-based operations
service LocationService {
  // SetLocation sets the current location for a user
  rpc SetLocation(SetLocationRequest) returns (SetLocationResponse);
  
  // GetLocation retrieves the current location for a user
  rpc GetLocation(GetLocationRequest) returns (GetLocationResponse);
  
  // FindNearestUsers finds the nearest users to a given user
  rpc FindNearestUsers(FindNearestUsersRequest) returns (FindNearestUsersResponse);
  
  // GetAllLocations retrieves all stored locations
  rpc GetAllLocations(GetAllLocationsRequest) returns (GetAllLocationsResponse);
}

// Location represents a user's geographical location
message Location {
  int32 user_id = 1;
  string role = 2;   
  double latitude = 3;
  double longitude = 4;
  double distance = 5;    // Distance from reference point (in km)
  double speed = 6;       // Speed in km/h
  string heading = 7;     // Direction (N, NE, E, SE, S, SW, W, NW)
  string timestamp = 8;   // ISO 8601 timestamp
}

// SetLocationRequest contains the location data to set
message SetLocationRequest {
  int32 user_id = 1;
  string role = 2;
  double latitude = 3;
  double longitude = 4;
  double speed = 5;
  string heading = 6;
  string timestamp = 7;
}

// SetLocationResponse indicates success or failure
message SetLocationResponse {
  bool success = 1;
  string message = 2;
  Location location = 3;
}

// GetLocationRequest specifies which user's location to retrieve
message GetLocationRequest {
  int32 user_id = 1;
}

// GetLocationResponse contains the user's location
message GetLocationResponse {
  bool success = 1;
  string message = 2;
  Location location = 3;
}

// FindNearestUsersRequest specifies search parameters
message FindNearestUsersRequest {
  int32 user_id = 1;
  string role = 2;
  int32 top_n = 3;        // Number of nearest users to return
  double radius = 4;      // Search radius in km (default: 10)
}

// FindNearestUsersResponse contains the list of nearest users
message FindNearestUsersResponse {
  bool success = 1;
  string message = 2;
  repeated Location locations = 3;
}

// GetAllLocationsRequest is empty (retrieves all)
message GetAllLocationsRequest {}

// GetAllLocationsResponse contains all locations
message GetAllLocationsResponse {
  bool success = 1;
  string message = 2;
  repeated Location locations = 3;
  int32 total_count = 4;
}
